@@ -229,7 +229,7 @@ InsertCompletion complete_filename(const SelectionList& sels,
         for (auto dir : options["path"].get<StringList>())
         {
             dir = real_path(parse_filename(dir, (buffer.flags() & Buffer::Flags::File) ?
-                                           split_path(buffer.name()).first : StringView{}));
+                                           split_path(buffer.filename()).first : StringView{}));
 
             if (not dir.empty() and dir.back() != '/')
                 dir += '/';
