@@ -9,6 +9,8 @@ released versions.
 
 * `FocusIn`/`FocusOut` events on suspend
 
+* `%val{buffile}` is now empty for scratch buffers
+
 == Kakoune 2025.06.03
 
 * Expose env vars that are mentioned in the arguments passed to shell expansions
